# vecdrift

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.ja.md  README.md  README.zh.md  pyproject.toml
.github/workflows/: ci.yml
docs/: baseline-format.md  metrics.md
examples/: README.md  generate_exports.py
scripts/: smoke.sh
src/vecdrift/: __init__.py  __main__.py  baseline.py  cli.py  compare.py  errors.py  geometry.py  linalg.py  metrics.py  pick.py  report.py  vectors.py  verdict.py
tests/: conftest.py  test_baseline.py  test_cli.py  test_compare.py  test_examples.py  test_geometry.py  test_linalg.py  test_metrics.py  test_pick.py  test_report.py  test_vectors.py  test_verdict.py
