[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vecdrift"
version = "0.1.0"
description = "Detect embedding-space drift across model versions with anchor-pair distance checks — offline, over exported vectors, with a re-embed-or-not verdict."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "JaydenCJ", email = "aisingioro.kiyon@gmail.com" }]
keywords = ["embeddings", "drift-detection", "vector-search", "rag", "regression-testing", "similarity", "offline"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
vecdrift = "vecdrift.cli:main"

[project.urls]
Homepage = "https://github.com/JaydenCJ/vecdrift"
Repository = "https://github.com/JaydenCJ/vecdrift"
Issues = "https://github.com/JaydenCJ/vecdrift/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
